created the header

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>CodingPhase Starter Kit</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/css/styles.css"><script async="" defer="" src="https://buttons.github.io/buttons.js"></script></head><body><div id="app"> </div><script src="/js/dist/vendors~FirstComp.js"></script><script src="/js/dist/FirstComp.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>CodingPhase Starter Kit</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            Logo
+        </div>
+        <div class="brand">festicket</div>
+        <input type="search" placeholder="Festival, Artist, Country...">
+        <div class="menu">
+            <ul>
+                <li>
+                    <a href="#">Festivals</a>
+                    <a href="#">Trips</a>
+                    <a href="#">Festival finder</a>
+                    <a href="#">Magazine</a>
+                </li>
+            </ul>
+        </div>
+        <div class="login">
+            <i class="fas fa-user-alt"></i>
+            log in
+        </div>
+    </header>
+</body>
+
+</html>
