created the festival grid

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div class="login-icon">
-            <div class="circle">
+            <div class="login-circle">
                 <i class="fas fa-user-alt"></i>
             </div>
         </div>
@@ -41,21 +41,125 @@
     </header>
     <section id="festival-jumbo">
         <div class="festival-title">
-            <h3>find your festival</h3>
+            <h3>find your perfect music festival</h3>
         </div>
-        <div class="filter-festival">
-            <div class="filter-artist">
-                <p>any artist</p>
-                <div class="arrow-button">
-                    <a href="#"><i class="fas fa-chevron-down"></i></a>
+
+    </section>
+    <section id="filter">
+        <div class="container">
+            <div class="filter-festival">
+                <div class="filter-artist">
+                    <p>any artist</p>
+                    <div class="arrow-button">
+                        <a href="#"><i class="fas fa-chevron-down"></i></a>
+                    </div>
+                </div>
+                <div class="filter-country">
+                    <p>any country</p>
+                    <div class="arrow-button">
+                        <a href="#"><i class="fas fa-chevron-down"></i></a>
+                    </div>
                 </div>
             </div>
-            <div class="filter-country">
-                <p>any country</p>
-                <div class="arrow-button">
-                    <a href="#"><i class="fas fa-chevron-down"></i></a>
-                </div>
+            <div class="filter-list">
+                <ul>
+
+                    <li>
+                        <div class="filter-circle">
+                            Date
+                        </div>
+                    </li>
+
+
+                    <li>
+                        <div class="filter-circle">
+                            Genre
+                        </div>
+                    </li>
+                    <li>
+                        <div class="filter-circle">
+                            Venue
+                        </div>
+                    </li>
+                    <li>
+                        <div class="filter-circle">
+                            Activity
+                        </div>
+                    </li>
+                    <li>
+                        <div class="filter-circle">
+                            Collection
+                        </div>
+                    </li>
+                </ul>
             </div>
+        </div>
+    </section>
+    <section id="upcoming-festivals">
+        <div class="container">
+
+
+            <div class="festival">
+                <div class="festival-img">
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         </div>
     </section>
 </body>
