changed the fonts and added a search icon inside the search field

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,11 @@
             <img src="./img/logo.png" alt="">
         </div>
         <div class="brand">festicket</div>
-        <input type="search" placeholder="Festival, Artist, Country...">
+        <div class="search-field">
+            <span class="search-icon"><i class="fas fa-search"></i></span>
+            <input type="search" placeholder="Festival, Artist, Country...">
+        </div>
+
         <div class="menu">
             <ul>
                 <li>
