added bg-color behind festival img

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,9 @@
 
 
             <div class="festival">
+
                 <div class="festival-img">
+                    <div class="bg-block1"></div>
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
@@ -125,6 +127,7 @@
             </div>
             <div class="festival">
                 <div class="festival-img">
+                    <div class="bg-block2"></div>
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
@@ -144,7 +147,9 @@
 
             </div>
             <div class="festival">
+
                 <div class="festival-img">
+                    <div class="bg-block3"></div>
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
