Finished the festival section

--- a/public/index.html
+++ b/public/index.html
@@ -101,12 +101,10 @@
     </section>
     <section id="upcoming-festivals">
         <div class="container">
-
-
             <div class="festival">
 
                 <div class="festival-img">
-                    <div class="bg-block1"></div>
+                    <!-- <div class="bg-block1"></div> -->
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
@@ -123,11 +121,10 @@
                         <i class="fas fa-angle-right"></i>
                     </div>
                 </div>
-
             </div>
             <div class="festival">
                 <div class="festival-img">
-                    <div class="bg-block2"></div>
+                    <!-- <div class="bg-block2"></div> -->
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
@@ -144,12 +141,10 @@
                         <i class="fas fa-angle-right"></i>
                     </div>
                 </div>
-
             </div>
             <div class="festival">
-
                 <div class="festival-img">
-                    <div class="bg-block3"></div>
+                    <!-- <div class="bg-block3"></div> -->
                     <img src="./img/rio.jpg" alt="">
                 </div>
                 <div class="info">
@@ -166,6 +161,140 @@
                         <i class="fas fa-angle-right"></i>
                     </div>
                 </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="festival">
+                <div class="festival-img">
+                    <!-- <div class="bg-block3"></div> -->
+                    <img src="./img/rio.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Tomorrowland 2019</h3>
+                    <p class="location">Broom, Belgium <i class="fas fa-circle"></i> 19-21 July 2019 & 26-28 July 2019
+                    </p>
+                    <p class="genre"> Trance <i class="fas fa-circle"></i> Techno <i class="fas fa-circle"></i> EDM
+                    </p>
+                    <div class="onsale">
+                        on sale
+                    </div>
+                    <div class="book-festival">
+                        <span class="book-now">Book now</span>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="show-more">
+                show more
+            </div>
+
+            <div class="past-festivals">
+                <i class="fas fa-chevron-left"></i>
+                <span>past festivals</span>
+            </div>
+
+            <div class="rainbow-bar">
 
             </div>
         </div>
