styled the popular festival section

--- a/public/index.html
+++ b/public/index.html
@@ -300,6 +300,120 @@
         </div>
         </div>
     </section>
+    <section id="festival-info">
+        <div class="container">
+            <div class="info">
+                <div class="artists">
+                    <h3>Artists</h3>
+                    <ul>
+                        <li><a href="#">sub zero project</a></li>
+                        <li><a href="#">Dj Adaro</a></li>
+                        <li><a href="#">50 Cent</a></li>
+                        <li><a href="#">Armin Van Buuren</a></li>
+                        <li><a href="#">Paul Oakenfold</a></li>
+                        <li><a href="#">Paul Van Dyk</a></li>
+                        <li><a href="#">Kanye West</a></li>
+                        <li><a href="#">Martin Garrix</a></li>
+                        <li><a href="#">Alan Walker</a></li>
+                        <li><a href="#">Da Tweekaz</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info">
+                <div class="countries">
+                    <h3>Countries</h3>
+                    <ul>
+                        <li><a href="#">Norway</a></li>
+                        <li><a href="#">Sweden</a></li>
+                        <li><a href="#">USA</a></li>
+                        <li><a href="#">Russia</a></li>
+                        <li><a href="#">Denmark</a></li>
+                        <li><a href="#">Italy</a></li>
+                        <li><a href="#">Netherlands</a></li>
+                        <li><a href="#">Finland</a></li>
+                        <li><a href="#">Germany</a></li>
+                        <li><a href="#">Belgium</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info">
+                <div class="genres">
+                    <h3>Genres</h3>
+                    <ul>
+                        <li><a href="#">Hardstyle</a></li>
+                        <li><a href="#">Techno</a></li>
+                        <li><a href="#">Trance</a></li>
+                        <li><a href="#">Rock</a></li>
+                        <li><a href="#">Rap</a></li>
+                        <li><a href="#">Pop</a></li>
+                        <li><a href="#">Hardcore</a></li>
+                        <li><a href="#">Frenchcore</a></li>
+                        <li><a href="#">Rawstyke</a></li>
+                        <li><a href="#">Metal</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info">
+                <div class="venues">
+                    <h3>Venues</h3>
+                    <ul>
+                        <li><a href="#">Beach</a></li>
+                        <li><a href="#">Outdoor</a></li>
+                        <li><a href="#">Inndoor</a></li>
+                        <li><a href="#">City</a></li>
+                    </ul>
+                </div>
+                <div class="activities">
+                    <h3>Activities</h3>
+                    <ul>
+                        <li><a href="#">Family Friendly</a></li>
+                        <li><a href="#">Ski</a></li>
+                        <li><a href="#">Bucket List</a></li>
+                        <li><a href="#">New Year's Eve</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="popular-festivals">
+        <div class="container">
+            <h3>Popular Festival</h3>
+            <div class="festival">
+                <ul>
+                    <li class="title">Creamfields festival 2019</li>
+                    <li class="title">Tomorrowland festival 2019</li>
+                    <li class="title">Defqon 1 festival 2019</li>
+                    <li class="title">Decibel festival 2019</li>
+                </ul>
+            </div>
+            <div class="festival">
+                <ul>
+                    <li class="title">Ultra festival 2019</li>
+                    <li class="title">Ultra Europe festival 2020</li>
+                    <li class="title">Roskilde festival 2020</li>
+                    <li class="title">Supramacy festival 2019</li>
+                </ul>
+            </div>
+            <div class="festival">
+                <ul>
+                    <li class="title">Creamfields festival 2019</li>
+                    <li class="title">Creamfields festival 2019</li>
+                    <li class="title">Creamfields festival 2019</li>
+                    <li class="title">Decibel festival 2019</li>
+                </ul>
+            </div>
+            <div class="festival">
+                <ul>
+                    <li class="title">Creamfields festival 2019</li>
+                    <li class="title">Supramacy festival 2019</li>
+                    <li class="title">Defqon 1 festival 2019</li>
+                    <li class="title">Qlimax festival 2019</li>
+                </ul>
+            </div>
+        </div>
+
+
+    </section>
 </body>
 
 </html>
