--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./img/logo.png" alt="">
+            <a href="./index.html"><img src="./img/logo.png" alt=""></a>
         </div>
-        <div class="brand">festicket</div>
+        <div class="brand"><a href="./index.html">festicket</a></div>
         <div class="search-field">
             <span class="search-icon"><i class="fas fa-search"></i></span>
             <input type="search" placeholder="Festival, Artist, Country...">
